[package]
edition = "2021"
name = "anyfuck"
version = "0.1.0"

authors = ["Orvar <orvarsegerstrom@gmail.com>"]
categories = ["simulation"]
description = "Brainfuck/Ook/Blub interpreter"
repository = "https://github.com/0rvar/anyfuck"
keywords = ["brainfuck", "interpreter", "binary"]
license = "MIT"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
libbfi = "6.0.1"
